--- a/Client/src/app/checkout/checkout.component.html
+++ b/Client/src/app/checkout/checkout.component.html
@@ -83,12 +83,12 @@
                 <div class="des left">Thanh toán khi nhận hàng (COD)</div>
             </div>
             <div class="option_payment">
-                <div><input type="radio" name="payment" id="store-method" ></div>
+                <div><input type="radio" name="payment" id="visa-method" ></div>
                 <div class="des left">Thẻ ATM/InternetBanking/Visa/Master/JCB qua cổng VNPAY</div>
             </div>
 
             <div class="option_payment">
-                <div><input type="radio" name="payment" id="store-method"></div>
+                <div><input type="radio" name="payment" id="momo-method"></div>
                 <div class="des left">Ví Momo</div>
             </div>
         </div>
@@ -118,48 +118,21 @@
 
       </div>
 
-      <div class="row row-info">
+
+
+      <div class="row row-info"  *ngFor="let item of data">
         <div class="col-1"></div>
         <div class="col-1 img">
-            <img src="../assets/img/ẢNH SẢN PHẨM/25.png" alt="">
+          <img [src]="item.Img[0]" style="border-radius: 50%" width="100%">
         </div>
-
-        <div class="col-3 info-center left"><b>Donut Chocolate</b></div>
-
-        <div class="col-2 info-center">30.000 VNĐ</div>
-        <div class="col-2 info-center">2</div>
-        <div class="col-2 info-center">60.000 VNĐ</div>
-        <div class="col-1 info-center"></div>
-      </div>
-
-      <div class="row row-info">
-        <div class="col-1"></div>
-        <div class="col-1 img">
-            <img src="../assets/img/ẢNH SẢN PHẨM/13.png" alt="">
-        </div>
-
-        <div class="col-3 info-center left"><b>Flourless Chocolate Cupcake</b></div>
-
-        <div class="col-2 info-center">45.000 VNĐ</div>
-        <div class="col-2 info-center">1</div>
-        <div class="col-2 info-center">45.000 VNĐ</div>
+        <div class="col-3 info-center left"> <b>{{item.Name}} ({{item.size.Size}}) </b></div>
+        <div class="col-2 info-center"> {{convertVND(item.size.PromotionPrice)}}</div>
+        <div class="col-2 info-center">{{item.qty}}</div>
+        <div class="col-2 info-center">{{convertVND(item.size.PromotionPrice * item.qty)}}</div>
         <div class="col-1"></div>
       </div>
 
-      <div class="row row-info">
-        <div class="col-1"></div>
-        <div class="col-1 img">
-            <img src="../assets/img/ẢNH SẢN PHẨM/81.png" alt="">
-        </div>
 
-        <div class="col-3 info-center left"><b>Bánh Kem Romantic</b>></div>
-
-        <div class="col-2 info-center">320.000 VNĐ</div>
-        <div class="col-2 info-center">1</div>
-        <div class="col-2 info-center">320.000 VNĐ</div>
-        <div class="col-1">
-        </div>
-      </div>
     </div>
 
     <hr>
@@ -182,7 +155,7 @@
                 <div class="col-7 left-title">Tổng tiền hàng</div>
                 <div class="col-5 right-title">
                   <div class="row">
-                    <div class="col-12" style="font-weight:bold;">425.000 VNĐ</div>
+                    <div class="col-12" style="font-weight:bold;">{{ convertVND(calculateTotalPrice()) }}</div>
                     <!-- <div class="col-4 left-title">VNĐ</div> -->
                   </div>
                 </div>
@@ -192,7 +165,7 @@
                   <div class="col-7 left-title">Giảm giá</div>
                   <div class="col-5 right-title">
                     <div class="row">
-                      <div class="col-12" style="font-weight:bold">-20.000 VNĐ</div>
+                      <div class="col-12" style="font-weight:bold"></div>
                       <!-- <div class="col-4 left-title">VNĐ</div> -->
                       </div>
                   </div>
@@ -202,8 +175,10 @@
                   <div class="col-7 left-title">Phí vận chuyển</div>
                   <div class="col-5 right-title">
                     <div class="row">
-                      <div class="col-12" style="font-weight:bold">+20.000 VNĐ</div>
-                      <!-- <div class="col-4 left-title">VNĐ</div> -->
+                      <div class="col-12" style="font-weight:bold" id="shipping-fee">
+
+                      </div>
+
                       </div>
                   </div>
               </div>
@@ -212,7 +187,7 @@
                   <div class="col-7 left-title">Tổng thanh toán</div>
                   <div class="col-5 right-title">
                     <div class="row">
-                      <div class="col-12 total1" >425.000 VNĐ</div>
+                      <div class="col-12 total1" >{{ convertVND(calculateTotalPrice()+shippingFeeValue) }} </div>
                       <!-- <div class="col-4">VNĐ</div> -->
                     </div>
                 </div>
@@ -234,8 +209,8 @@
       </div>
 
       <div class="button_right">
-          <a href="./checkoutOrder.html">
-              <button type="button" class="btn btn-primary input">
+          <a>
+              <button type="button" (click)="showModal4()" class="btn btn-primary input">
                   Hoàn tất đơn hàng
               </button>
           </a>
@@ -380,6 +355,43 @@
 
       </div>
   </div>
+
+<div class="modal4">
+  <div class="modal__overlay"></div>
+  <div class="modal__body">
+    <div >
+        <div class="main-3">
+            <div id="title-checkout">
+
+            </div>
+            <div class="main-3">
+              <div  *ngFor="let item of data">
+                  <p style="display: flex; justify-content: space-between;"><span> {{item.Name}} ({{item.size.Size}})</span> <span>{{item.qty}}x{{convertVND(item.size.PromotionPrice)}}</span></p>
+              </div>
+              <div style="display: flex; justify-content: space-between;"><span>Giảm giá</span></div>
+              <div style="display: flex; justify-content: space-between;"><span>Phí vận chuyển</span><div id="shipping-fee"></div></div>
+              <div style="display: flex; justify-content: space-between;font-weight: bold;color: red;"><span>Tổng cộng</span><span>{{ convertVND(calculateTotalPrice()+shippingFeeValue) }}</span></div>
+              <h4>Vui lòng quét mã dưới đây để thanh toán</h4>
+              <div style="text-align: center;"><img src="../assets/img/QR.png" alt=""></div>
+                <div class="button">
+                  <a  (click)="hideModal4()">
+                      <button type="modal-button" class="btn btn-primary main-input" >
+                          Trở lại
+                      </button>
+                  </a>
+
+                  <a >
+                      <button type="modal-button" class="btn btn-primary main-input" >
+                          Hoàn thành
+                      </button>
+                  </a>
+                </div>
+            </div>
+          </div>
+    </div>
+
+  </div>
+</div>
 
   <div class="modal3">
       <div class="modal__overlay"></div>
