--- a/Client/src/app/header/header.component.html
+++ b/Client/src/app/header/header.component.html
@@ -28,7 +28,7 @@
                       </a>
                   </li>
                   <li class="login" *ngIf="!login">
-                      <a routerLink="/login" >
+                      <a routerLink="/getlogin" >
                           <i class="fa-solid fa-right-to-bracket" ></i> Đăng nhập
                       </a>
                   </li>
