--- a/Client/src/app/main/main.component.html
+++ b/Client/src/app/main/main.component.html
@@ -4,7 +4,7 @@
 
   <!-- Slider -->
   <div class="abc" *ngIf="login">
-     <marquee class="intro"> Chào mừng <span style="font-style: italic;">{{id}}</span> đã ghé website của chúng tôi </marquee>
+     <marquee scrollamount="15" class="intro"> Chào mừng <span style="font-style: italic; font-weight: bold;">{{id}}</span> đã ghé website của chúng tôi </marquee>
     </div>
   <div class="abc" *ngIf="!login">
     <!-- your login form goes here -->
