--- a/Client/src/app/product-detail/product-detail.component.css
+++ b/Client/src/app/product-detail/product-detail.component.css
@@ -49,6 +49,7 @@ ol li {
 .body {
     margin: auto !important ;
     margin-top: 0 !important;
+    background-color: #f5f5f5;
 }
 /* Chi tiết sản phẩm */
 
@@ -67,6 +68,16 @@ ol li {
     transition: all 0.5s ease;
     /* Chưa thấy gì xảy ra */
 }
+.content-product {
+  background-color: white;
+  border: 1px solid #e0e0e0; /* add a border to the container */
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.img-item:hover {
+  border: 1px solid red; /* add a red border on hover */
+}
 .img-showcase img {
     min-width: 100%; /*cho hiện 1 hình lớn 1 lần*/
 }
@@ -80,6 +91,7 @@ ol li {
 .img-item:hover{
     opacity: 0.8;
     /* Khi hover vô thì có độ mờ mờ */
+
 }
 
 /* Right */
@@ -221,4 +233,218 @@ ol li {
     width: 80%;
     margin: auto;
     margin-bottom: 10px;
+}
+
+
+#products{
+  margin-left: 50px;
+  margin-right: 20px;
+  border-radius: 20px;
+  display: flex;
+  flex-wrap: nowrap;
+  width: 1400px;
+}
+.product{
+  background-color: #f0d9d8;
+  text-align: center;
+  border-radius: 10px;
+  margin: 12px;
+  padding: 15px;
+  height: 340px;
+  width: 350px;
+}
+
+.product p{
+  margin-bottom: 0;
+}
+.product img{
+  width: 270px;
+  height: 290px;
+  padding: 20px;
+  border-radius: 40px;
+}
+.product .img-product{
+  position: relative;
+}
+.product .name{
+  font-size: 17px;
+  font-weight: bold;
+  text-transform:uppercase;
+}
+.product .cart-love{
+  background-color: #f38a95;
+  width: 40%;
+  position: absolute;
+  left: 30%;
+  bottom:0;
+  border-radius: 10px;
+  font-size: 25px;
+}
+.product .star{
+  color: yellow;
+}
+.vote{
+  color: rgb(143, 143, 133);
+  font-weight: 500;
+}
+h2 {
+  color: #ff0000;
+  font-size: 36px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+.img-item{
+  width: 100px;
+  height: 100px;
+}
+.swiper {
+  width: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+}
+.swiper-wrapper{
+  width: 100%;
+}
+.product-variation {
+  overflow: visible;
+  cursor: pointer;
+  min-width: 5rem;
+  min-height: 2.125rem;
+  box-sizing: border-box;
+  padding: .25rem .75rem;
+  margin: 0 8px 8px 0;
+  color: rgba(0,0,0,.8);
+  text-align: left;
+  border-radius: 2px;
+  border: 1px solid rgba(0,0,0,.09);
+  position: relative;
+  background: #fff;
+  outline: 0;
+  word-break: break-word;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center
+}
+
+.product-variation.focus-visible:before,.product-variation:focus-visible:before {
+  --focus-indicator-spacing: 2px;
+  content: "";
+  width: calc(100% + var(--focus-indicator-spacing)*2);
+  height: calc(100% + var(--focus-indicator-spacing)*2);
+  padding: var(--focus-indicator-spacing);
+  outline: var(--focus-indicator-stroke-width) solid var(--focus-indicator-color);
+  position: absolute;
+  border-radius: var(--focus-indicator-border-radius);
+  top: calc(var(--focus-indicator-spacing)*-1);
+  left: calc(var(--focus-indicator-spacing)*-1);
+  margin: calc(var(--focus-indicator-spacing)*-1)
+}
+
+.product-variation:hover {
+  color: var(--brand-primary-color,#ee4d2d);
+  border-color: var(--brand-primary-color,#ee4d2d)
+}
+
+.product-variation--disabled {
+  color: rgba(0,0,0,.26);
+  cursor: not-allowed
+}
+
+.product-variation--disabled:hover {
+  border-color: rgba(0,0,0,.09);
+  color: rgba(0,0,0,.26)
+}
+
+.product-variation--disabled:focus {
+  outline: 0
+}
+
+.product-variation--selected {
+  color: var(--brand-primary-color,#ee4d2d);
+  border-color: var(--brand-primary-color,#ee4d2d)
+}.product-variation {
+    overflow: visible;
+    cursor: pointer;
+    min-width: 5rem;
+    min-height: 2.125rem;
+    box-sizing: border-box;
+    padding: .25rem .75rem;
+    margin: 0 8px 8px 0;
+    color: rgba(0,0,0,.8);
+    text-align: left;
+    border-radius: 2px;
+    border: 1px solid rgba(0,0,0,.09);
+    position: relative;
+    background: #fff;
+    outline: 0;
+    word-break: break-word;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center
+}
+
+.product-variation.focus-visible:before,.product-variation:focus-visible:before {
+    --focus-indicator-spacing: 2px;
+    content: "";
+    width: calc(100% + var(--focus-indicator-spacing)*2);
+    height: calc(100% + var(--focus-indicator-spacing)*2);
+    padding: var(--focus-indicator-spacing);
+    outline: var(--focus-indicator-stroke-width) solid var(--focus-indicator-color);
+    position: absolute;
+    border-radius: var(--focus-indicator-border-radius);
+    top: calc(var(--focus-indicator-spacing)*-1);
+    left: calc(var(--focus-indicator-spacing)*-1);
+    margin: calc(var(--focus-indicator-spacing)*-1)
+}
+
+.product-variation:hover {
+    color: var(--brand-primary-color,#ee4d2d);
+    border-color: var(--brand-primary-color,#ee4d2d)
+}
+
+.product-variation--disabled {
+    color: rgba(0,0,0,.26);
+    cursor: not-allowed
+}
+
+.product-variation--disabled:hover {
+    border-color: rgba(0,0,0,.09);
+    color: rgba(0,0,0,.26)
+}
+
+.product-variation--disabled:focus {
+    outline: 0
+}
+
+.product-variation--selected {
+    color: var(--brand-primary-color,#ee4d2d);
+    border-color: var(--brand-primary-color,#ee4d2d)
+}
+.product-variation__tick {
+  width: .9375rem;
+  height: .9375rem;
+  position: absolute;
+  overflow: hidden;
+  right: 0;
+  bottom: 0
+}
+.product-variation__tick>.icon-tick-bold {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  color: #fff;
+  font-size: 8px
+}
+
+.product-variation__tick:before {
+  border: .9375rem solid transparent;
+  border-bottom: .9375rem solid var(--brand-primary-color,#ee4d2d);
+  content: "";
+  position: absolute;
+  right: -.9375rem;
+  bottom: 0
 }
