--- a/Client/src/app/login/login.component.css
+++ b/Client/src/app/login/login.component.css
@@ -90,14 +90,16 @@ body{
  .form-box button[type="submit"]{
    font-family: 'Montserrat', sans-serif;
    font-size: 20px;
-   margin-top: 1rem;
    border: none;
    cursor: pointer;
    border-radius: 10px;
    background: #E75C6B;
    color: #fff;
    transition: 0.5s;
-   padding: 5px;
+   padding: 8px;
+ }
+ .btn{
+  width: 430px;
  }
 
  .form-box button[type="submit"]:hover{
@@ -109,6 +111,10 @@ body{
   font-family: 'Montserrat', serif;
    color: #E75C6B;
    font-weight: bold;
+ }
+ .text-right{
+  text-align: right;
+  margin-top: 20px;
  }
 
  .forget-link:hover, .register-link:hover{
