--- a/Client/src/app/login/login.component.html
+++ b/Client/src/app/login/login.component.html
@@ -111,7 +111,7 @@
     <form class="form-box px-3" (ngSubmit)="login()" [formGroup]="loginForm" ><div class="form-group clearfix">
 
     <div class="form-input">
-      <span><i class="fa fa-envelope-o"></i></span>
+      <span><i class="fa-solid fa-user"></i></span>
                     <input placeholder="Nhập tài khoản" class="form-control"  formControlName="userid" type="text"></div></div>
     <div class="form-group clearfix">
 
@@ -122,7 +122,8 @@
                     <small *ngIf="loginForm.controls['password'].errors?.['minlength']">
                       Mật khẩu phải có ít nhất 6 kí tự.
                     </small>
-    <div class="col-xs-12 form-group text-right"><button class="btn btn-success" type="submit">Đăng nhập</button></div>
+
+    <div class="col-xs-12 form-group text-right"><button class="btn btn-success" type="submit"><b> Đăng nhập</b></button></div>
     <div class="text-right">
       <a href="./forgotPassword" class="forget-link">
         Quên mật khẩu?
