--- a/Client/src/app/register/register.component.html
+++ b/Client/src/app/register/register.component.html
@@ -16,12 +16,15 @@
               <form class="form-box "  >
                 <div class="form-input">
                   <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
                   </svg></span>
-                  <input type="text"  #name="ngModel" name="username" [(ngModel)]="user.UserName" placeholder="Tên đăng nhập" required>
-                </div>
+
+
+                  <div class="form-input">
+                    <span><i class="fa-solid fa-user"></i></span>
+                    <input type="text"  #name="ngModel" name="username" [(ngModel)]="user.UserName" placeholder="Tên đăng nhập" required></div>
+                  </div>
                 <div class="form-input">
-                  <span><i class="fa fa-envelope-o"></i></span>
+                  <span><i class="fa-solid fa-phone"></i></span>
                   <input type="text" #name="ngModel" name="Phone" [(ngModel)]="user.Phone" placeholder="Nhập số điện thoại" required pattern="[0-9]{10}">
                 </div>
                 <div class="form-input">
@@ -32,19 +35,19 @@
                 <div>
                   <td colspan="2">
                     <div *ngIf="password.errors && (password.dirty || password.touched)">
-                      <small *ngIf="password.errors['required']">Hãy nhập mật khẩu</small>
                       <small *ngIf="password.errors['minlength']">Mật khẩu phải chứa ít nhất 6 kí tự</small>
                     </div>
                   </td>
                 </div>
                 <div class="form-input">
                   <span><i class="fa fa-key"></i></span>
-                  <input type="password" name="" placeholder="Nhập lại mật khẩu" id="repassword" required>
+                  <input [(ngModel)]="rePassword" type="password" name="ngModel" placeholder="Nhập lại mật khẩu" id="repassword" required>
                 </div>
 
                 <div class="mb-3">
+
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="cb1" name="" required>
+                    <input [(ngModel)]="AgreeToTerms" type="checkbox" class="custom-control-input" id="cb1" name="ngModel" required>
                     <label class="custom-control-label" for="cb1" aria-required="true" style="font-family: 'Inter', sans-serif ; color: #E75C6B;">Tôi đồng ý với các điều khoản của Memory</label>
                   </div>
                 </div>
@@ -57,7 +60,7 @@
 
                 <div class="text-center mb-2" style="font-family: 'Inter', sans-serif ;">
                   Bạn đã có tài khoản?
-                  <a href="login" class="login-link">
+                  <a href="./getlogin" class="login-link">
                     Đăng nhập tại đây!
                   </a>
                 </div>
